[gd_scene load_steps=48 format=3 uid="uid://bvtoxlf28wtky"]

[ext_resource type="Script" uid="uid://4s31hdmois1e" path="res://Core/SFXManager.gd" id="1_dv4dc"]
[ext_resource type="AudioStream" uid="uid://bc8u4rrhd8rbv" path="res://Audio/SFX/coin1.wav" id="2_s23jl"]
[ext_resource type="AudioStream" uid="uid://bdep5atuuoig6" path="res://Audio/SFX/coin2.wav" id="3_ghmv4"]
[ext_resource type="AudioStream" uid="uid://bo3nyj108hwbe" path="res://Audio/SFX/coin3.wav" id="4_hq4d4"]
[ext_resource type="AudioStream" uid="uid://y6bt1gm7tgst" path="res://Audio/SFX/coin4.wav" id="5_8m4dd"]
[ext_resource type="AudioStream" uid="uid://q83tww840j70" path="res://Audio/SFX/coin5.wav" id="6_4x7nc"]
[ext_resource type="AudioStream" uid="uid://b71ulytp05n3v" path="res://Audio/SFX/click1.mp3" id="7_pabud"]
[ext_resource type="AudioStream" uid="uid://cprrj43t06ggm" path="res://Audio/SFX/click2.mp3" id="8_bafky"]
[ext_resource type="AudioStream" uid="uid://b54rqq1lm3iyi" path="res://Audio/SFX/click3.mp3" id="9_o3hpx"]
[ext_resource type="AudioStream" uid="uid://b0t51oow6q62n" path="res://Audio/SFX/click4.mp3" id="10_w8s2a"]
[ext_resource type="AudioStream" uid="uid://dxtvavsv7mgpp" path="res://Audio/SFX/click5.mp3" id="11_c6x6j"]
[ext_resource type="AudioStream" uid="uid://dvak6mq27218j" path="res://Audio/SFX/death.wav" id="12_prqw4"]
[ext_resource type="AudioStream" uid="uid://bd4oadj1uk5kt" path="res://Audio/SFX/good.wav" id="13_2c27i"]
[ext_resource type="AudioStream" uid="uid://4bedovalgj41" path="res://Audio/SFX/bad.wav" id="14_8pgo2"]
[ext_resource type="AudioStream" uid="uid://et833pi0qn6" path="res://Audio/SFX/levelup.wav" id="15_v7iow"]
[ext_resource type="AudioStream" uid="uid://4dwgpkriw7yu" path="res://Audio/SFX/manycoins1.wav" id="16_okpdb"]
[ext_resource type="AudioStream" uid="uid://cpap3fwjf5ou1" path="res://Audio/SFX/manycoins2.wav" id="17_vxndl"]
[ext_resource type="AudioStream" uid="uid://b7mrk2sdjy30y" path="res://Audio/SFX/heal.wav" id="18_6qx5o"]
[ext_resource type="AudioStream" uid="uid://cy5igdx5p5woq" path="res://Audio/SFX/nextlevel.wav" id="19_fqt6q"]
[ext_resource type="AudioStream" uid="uid://dlubms4wxdb2j" path="res://Audio/SFX/step1.mp3" id="20_tprj8"]
[ext_resource type="AudioStream" uid="uid://csfvnbmm8rk1o" path="res://Audio/SFX/step2.mp3" id="21_tnvv4"]
[ext_resource type="AudioStream" uid="uid://cc18q08i5o05t" path="res://Audio/SFX/step3.mp3" id="22_w1gk5"]
[ext_resource type="AudioStream" uid="uid://b2u0c3mrbyni3" path="res://Audio/SFX/step4.mp3" id="23_vorjq"]
[ext_resource type="AudioStream" uid="uid://blxtw5sskbo3i" path="res://Audio/SFX/step5.mp3" id="24_cui2k"]
[ext_resource type="AudioStream" uid="uid://bvsby6pvm6jji" path="res://Audio/SFX/whoosh1.wav" id="25_sj2to"]
[ext_resource type="AudioStream" uid="uid://du88cs067ku" path="res://Audio/SFX/whoosh2.wav" id="26_62l7y"]
[ext_resource type="AudioStream" uid="uid://syb0qsbwkcl4" path="res://Audio/Music/Ambience 1 (Composiia - Cronofobia).mp3" id="27_8fmm8"]
[ext_resource type="AudioStream" uid="uid://baif4qxxwvg1i" path="res://Audio/Music/Ambience 2 (Composiia - Deziro Kaj Pereo).mp3" id="28_ec6bt"]
[ext_resource type="AudioStream" uid="uid://bjas7njn2s121" path="res://Audio/Music/Ambience 3 (Composiia - Apostatas ).mp3" id="29_6b5wo"]
[ext_resource type="AudioStream" uid="uid://5l3eaorcoorq" path="res://Audio/Music/Ambience 4 (Composiia - Mau Pressagio).mp3" id="30_n8ptg"]
[ext_resource type="AudioStream" uid="uid://gsjg2hc5khxl" path="res://Audio/Music/Ambience 5 (Composiia - O Corredor).mp3" id="31_pu1l8"]
[ext_resource type="AudioStream" uid="uid://dgyj0p2oml478" path="res://Audio/Music/Ambience 6(Composiia - Geada).mp3" id="32_eejyx"]
[ext_resource type="AudioStream" uid="uid://caqba8n3fxufm" path="res://Audio/Music/Death (Composiia - Sina).mp3" id="33_2cjd1"]
[ext_resource type="AudioStream" uid="uid://bpyexydc013vt" path="res://Audio/Music/Main Menu (Composiia - Coracao de Breu).mp3" id="34_rdlb3"]
[ext_resource type="AudioStream" uid="uid://txg3vj85axit" path="res://Audio/SFX/sword1.wav" id="35_8pgo2"]
[ext_resource type="AudioStream" uid="uid://66dfpwovmy27" path="res://Audio/SFX/sword2.wav" id="36_v7iow"]
[ext_resource type="AudioStream" uid="uid://ctpioyoqbqpsb" path="res://Audio/SFX/sword3.wav" id="37_okpdb"]
[ext_resource type="AudioStream" uid="uid://dxt8xg4hpd1on" path="res://Audio/SFX/sword4.wav" id="38_vxndl"]
[ext_resource type="AudioStream" uid="uid://ccjjq671wes8f" path="res://Audio/SFX/sword5.wav" id="39_6qx5o"]
[ext_resource type="AudioStream" uid="uid://bwc64t7vwwosa" path="res://Audio/SFX/dropitem.wav" id="40_fqt6q"]
[ext_resource type="AudioStream" uid="uid://chg6gfi3a7o7e" path="res://Audio/SFX/gameover.wav" id="41_tprj8"]
[ext_resource type="AudioStream" uid="uid://bdynh22j1re7g" path="res://Audio/SFX/pickup.wav" id="42_v7iow"]
[ext_resource type="AudioStream" uid="uid://bh4yia4vxhe7n" path="res://Audio/SFX/paper1.wav" id="43_fqt6q"]
[ext_resource type="AudioStream" uid="uid://bgwjckyn7c75x" path="res://Audio/SFX/paper2.wav" id="44_tprj8"]
[ext_resource type="AudioStream" uid="uid://bo05nrsqs1ykt" path="res://Audio/SFX/paper3.wav" id="45_tnvv4"]
[ext_resource type="AudioStream" uid="uid://cs80dnf7bvr7c" path="res://Audio/SFX/paper4.wav" id="46_w1gk5"]
[ext_resource type="AudioStream" uid="uid://dmmb8iujcuihv" path="res://Audio/SFX/potion.wav" id="47_tprj8"]

[node name="SoundFX" type="Node"]
script = ExtResource("1_dv4dc")

[node name="coin1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_s23jl")

[node name="coin2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ghmv4")

[node name="coin3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hq4d4")

[node name="coin4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8m4dd")

[node name="coin5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_4x7nc")

[node name="click1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pabud")
volume_db = -10.0

[node name="click2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_bafky")
volume_db = -10.0

[node name="click3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_o3hpx")
volume_db = -10.0

[node name="click4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_w8s2a")
volume_db = -10.0

[node name="click5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_c6x6j")
volume_db = -10.0

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_prqw4")
volume_db = -10.0

[node name="good" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_2c27i")
volume_db = -15.0

[node name="bad" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_8pgo2")
volume_db = -15.0

[node name="levelup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_v7iow")
volume_db = -10.0

[node name="manycoins1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_okpdb")
volume_db = -10.0

[node name="manycoins2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_vxndl")
volume_db = -10.0

[node name="heal" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_6qx5o")
volume_db = -15.0

[node name="nextfloor" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_fqt6q")

[node name="footstep1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_tprj8")
volume_db = -25.0

[node name="footstep2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_tnvv4")
volume_db = -25.0

[node name="footstep3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_w1gk5")
volume_db = -25.0

[node name="footstep4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_vorjq")
volume_db = -25.0

[node name="footstep5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_cui2k")
volume_db = -25.0

[node name="swing1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_sj2to")
volume_db = -15.0

[node name="swing2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_62l7y")
volume_db = -15.0

[node name="MusicAmbience1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("27_8fmm8")
volume_db = -15.0

[node name="MusicAmbience2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("28_ec6bt")
volume_db = -15.0

[node name="MusicAmbience3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("29_6b5wo")
volume_db = -15.0

[node name="MusicAmbience4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("30_n8ptg")
volume_db = -15.0

[node name="MusicAmbience5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("31_pu1l8")
volume_db = -15.0

[node name="MusicAmbience6" type="AudioStreamPlayer" parent="."]
stream = ExtResource("32_eejyx")
volume_db = -15.0

[node name="MusicDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("33_2cjd1")
volume_db = -15.0
parameters/looping = true

[node name="MusicMainMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("34_rdlb3")
volume_db = -15.0
parameters/looping = true

[node name="sword1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("35_8pgo2")
volume_db = -15.0

[node name="sword2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("36_v7iow")
volume_db = -15.0

[node name="sword3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("37_okpdb")
volume_db = -15.0

[node name="sword4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("38_vxndl")
volume_db = -15.0

[node name="sword5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("39_6qx5o")
volume_db = -15.0

[node name="dropitem" type="AudioStreamPlayer" parent="."]
stream = ExtResource("40_fqt6q")
volume_db = -10.0

[node name="gameoversfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("41_tprj8")
volume_db = -10.0

[node name="pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("42_v7iow")
volume_db = -10.0

[node name="paper1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("43_fqt6q")

[node name="paper2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("44_tprj8")

[node name="paper3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("45_tnvv4")

[node name="paper4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("46_w1gk5")

[node name="potion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("47_tprj8")
volume_db = -10.0
